# olx_parser_bot

./: .env  .gitignore  LICENSE  README.md  bot.py  kyiv_rent.py  kyiv_rent_to_telegram.py  logger_.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
csv/: all_ad.csv
