[tool.poetry]
name = "apartments"
version = "0.1.0"
description = ""
authors = ["OleksandrGnatiuk <oleksandr.gnatiuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
lxml = "^5.3.1"
beautifulsoup4 = "^4.13.3"
dotenv = "^0.9.9"
aiogram = "^3.19.0"
apscheduler = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
